clusters/talos-cluster/apps/hello-hwg/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-hwg
  namespace: hello-hwg
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hello-hwg
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
