clusters/talos-cluster/apps/hello-hwg/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hello-hwg-ingress
  namespace: hello-hwg
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hello-hwg
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": cloudflared-hwg
            "k8s:app.kubernetes.io/name": cloudflared
            "k8s:app.kubernetes.io/instance": hwg
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
