clusters/talos-cluster/apps/hello-hwg/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hello-hwg-default-deny
  namespace: hello-hwg
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
